--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
+<div class="h-screen overflow-auto">
 
-<app-header></app-header>
+  <app-header></app-header>
 
-<router-outlet></router-outlet>
-
-<app-footer></app-footer>
-
+  <router-outlet></router-outlet>
 
 
 
-
-
+  <app-footer class="mt-auto"></app-footer>
+</div>
