Añadido spiner cargando

--- a/src/app/page/catalogo/catalogo.component.css
+++ b/src/app/page/catalogo/catalogo.component.css
@@ -96,7 +96,23 @@
   border-radius: 5px;
 }
 
+.animate-spin {
+  /*animation: spin 1s linear infinite;*/
+var(--animate-spin);
+}
 
+@keyframes spin {
+  /*0% {*/
+  /*  transform: rotate(0deg);*/
+  /*}*/
+  /*100% {*/
+  /*  transform: rotate(360deg);*/
+  /*}*/
+
+  to {
+    transform: rotate(360deg);
+  }
+}
 
 
 
