--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -76,7 +76,7 @@
     </div>
     <div class="border-b border-gray-200 py-6">
       <!-- Precios -->
-      <div>
+      <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9 border-t border-custom-blue">
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Precios</h3>
         <ul class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
           <li><input type="checkbox" (change)="filterByPrice('menor5')" [checked]="selectedPriceRange ==='menor5'" class="mr-2">Menos de 5 euros</li>
@@ -88,7 +88,7 @@
       </div>
 
       <!-- Categoría -->
-      <div class="max-w-[333px] p-4 space-y-4 mt-4 border-t border-custom-blue">
+      <div class="max-w-[500px] p-4 space-y-4 mt-4 mr-9 ml-9 border-t border-custom-blue">
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Categoría</h3>
         <ul class="flex flex-col space-y-2 text-[#1D2C4B] text-md font-bold font-[Montserrat]">
           <li *ngFor="let category of categories">
@@ -135,10 +135,14 @@
 
   <div class="flex-grow grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-3 bg-gray-800">
     <div *ngIf="!libros || libros.length === 0" class="loading text-white text-center">
-      <p>Cargando libros...</p>
+      <div class="fixed inset-0 flex items-center justify-center bg-gray-900 bg-opacity-50 z-50">
+        <h1 class="text-xl md:text-7xl font-bold flex items-center">Cargand
+          </h1>
+        <div class="animate-spin rounded-full h-16 w-16 border-t-2 border-b-2 border-gray-100"></div>
+      </div>
     </div>
 
-    <div *ngFor="let libro of filteredBooks" class="bg-white rounded-lg shadow-md p-3 flex flex-col items-center transform scale-90">
+    <div *ngFor="let libro of filteredBooks" class="bg-white rounded-lg shadow-md p-3 flex flex-col items-center transform scale-70">
       <div class="relative w-32 h-48">
         <img [src]="libro.imagen" [alt]="libro.titulo" class="w-full h-full object-cover rounded" />
         <div class="absolute inset-0 flex items-center justify-center opacity-0 hover:opacity-100 bg-black bg-opacity-50 transition-opacity">
@@ -159,14 +163,16 @@
 
       <button class="mt-3 px-3 py-1.5 bg-blue-900 text-white text-sm rounded hover:bg-blue-700">Ver detalles</button>
     </div>
+
+
+
+
   </div>
 </div>
 
 
 
-
-
-<div class="flex items-center justify-between border-t border-gray-200 bg-white px-4 py-3 sm:px-6">
+<div class="flex items-center justify-center border-t border-gray-200 bg-customTeal px-4 py-3 sm:px-6">
 
   <nav class="isolate inline-flex -space-x-px rounded-md shadow-xs" aria-label="Pagination">
 
