--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -106,8 +106,10 @@
       <p class="text-sm text-gray-600 text-center">por {{ libro.autor }}</p>
       <p class="mt-2 text-xl font-semibold text-blue-900">{{ libro.precio | currency: 'EUR' }}</p>
       <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ff9c1a"><path d="m354-287 126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM233-120l65-281L80-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-350Z"/></svg>'
-      <button class="mt-4 px-4 py-2 bg-blue-900 text-white rounded hover:bg-blue-700">Ver detalles</button>
-    </div>
+      <!-- Botón para ver detalles del libro -->
+      <button (click)="verDetallesLibro(libro.id)" class="mt-4 px-4 py-2 bg-blue-900 text-white rounded hover:bg-blue-700">
+        Ver detalles
+      </button>    </div>
   </div>
 </div>
 
