--- a/src/app/page/detalle-de-libro/detalle-de-libro.component.html
+++ b/src/app/page/detalle-de-libro/detalle-de-libro.component.html
@@ -1,4 +1,18 @@
 <div class="container mx-auto p-4">
+  <div class="container mx-auto flex flex-col md:flex-row items-center
+   px-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">
+
+    <div class="mt-10 md:mt-0 md:ml-0 lg:ml-0">
+      <img src="../../../../assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
+    </div>
+
+    <!-- Dynamic Text Content (passed from parent) -->
+    <div class=" bg-customAzulito flex items-center justify-center text-center md:text-left max-w-2xl lg:max-w-xl mx-auto">
+      <h1 class="text-4xl font-extrabold text-blue-900 leading-tight">
+        Información del libro
+      </h1>
+    </div>
+  </div>
   <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-sm overflow-hidden flex flex-col md:flex-row">
     <!-- Imagen del libro -->
     <div class="md:w-1/3">
