--- a/src/app/page/detalle-de-libro/detalle-de-libro.component.html
+++ b/src/app/page/detalle-de-libro/detalle-de-libro.component.html
@@ -41,14 +41,24 @@
         <p class="text-gray-600"><span class="font-semibold">Categoría:</span> {{ libro?.categoria }}</p>
 
       </div>
-      <!-- Calificación media -->
-      <div class="flex items-center mt-2">
-        <p class="text-gray-600 font-semibold">Calificación media:</p>
+      <div class="flex flex-col sm:flex-row items-center mt-4 bg-gray-100 p-4 rounded-lg shadow-md">
+        <p class="text-lg font-semibold text-gray-800 flex-shrink-0">Calificación media:</p>
 
-        <span class="text-gray-600 ml-2">
-          ({{ media_calificacion !== null && !isNaN(media_calificacion) ? media_calificacion?.toFixed(1) : '0' }}/5)
-        </span>
+        <div class="flex items-center ml-2 space-x-1 text-yellow-400 text-xl">
+          <ng-container *ngFor="let star of starsArray">
+            <span class="text-yellow-500">★</span>
+          </ng-container>
+          <ng-container *ngIf="hasHalfStar">
+            <span class="text-yellow-500">½</span>
+          </ng-container>
+        </div>
+
+        <span class="text-gray-700 text-lg font-medium ml-3">
+    ({{ media_calificacion !== null && !isNaN(media_calificacion) ? media_calificacion.toFixed(1) : '0' }}/5)
+  </span>
       </div>
+
+
 
       <div class="mt-4">
         <span class="text-2xl font-bold text-gray-900">{{ libro?.precio | currency }}</span>
