--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -15,8 +15,8 @@
 
     <!-- Menú de navegación en pantallas grandes -->
     <ul class="hidden md:flex space-x-6 text-lg md:text-white">
-      <li><a href="#" class="hover:text-gray-300">Inicio</a></li>
-      <li><a href="#" class="hover:text-gray-300">Catálogo</a></li>
+      <li><a routerLink="/home" class="hover:text-gray-300">Inicio</a></li>
+      <li><a routerLink="/catalogo"href="#" class="hover:text-gray-300">Catálogo</a></li>
       <li>
         <a href="#" class="bg-white text-blue-900 px-4 py-2 rounded hover:bg-gray-200">
           Iniciar sesión o registrarse
