Mejora de la recomdación. Y que aparezca todo en euros.

--- a/src/app/page/detalle-de-libro/detalle-de-libro.component.html
+++ b/src/app/page/detalle-de-libro/detalle-de-libro.component.html
@@ -61,7 +61,7 @@
 
 
       <div class="mt-4">
-        <span class="text-2xl font-bold text-gray-900">{{ libro?.precio | currency }}</span>
+        <span class="text-2xl font-bold text-gray-900">{{ libro?.precio | currency: '€' }}</span>
       </div>
 
       <div class="mt-6">
