--- a/src/app/component/Inicio_componentes_propios/book-card-categoria/book-card-categoria.component.html
+++ b/src/app/component/Inicio_componentes_propios/book-card-categoria/book-card-categoria.component.html
@@ -2,5 +2,5 @@
   <img [src]="book.imagen || 'assets/default-book.jpg'" alt="{{ book.titulo }}" class="w-full h-32 object-contain rounded-md">
   <h3 class="text-gray-600 text-lg font-bold mt-2 truncate">{{ book.titulo }}</h3>
   <p class="text-gray-600 truncate">{{ book.autor.apellidos }}</p>
-  <p class="text-blue-500 font-semibold mt-auto">{{ book.precio | currency }}</p>
+  <p class="text-blue-500 font-semibold mt-auto">{{ book.precio | currency: '€'}} </p>
 </div>
