--- a/src/app/component/Inicio_componentes_propios/book-card/book-card.component.html
+++ b/src/app/component/Inicio_componentes_propios/book-card/book-card.component.html
@@ -5,5 +5,5 @@
   <p class="text-gray-600">{{ book.autor}}</p>
 
 
-  <p class="text-blue-500 font-semibold">{{ book.precio | currency }}</p>
+  <p class="text-blue-500 font-semibold">{{ book.precio | currency: '€' }}</p>
 </div>
