--- a/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
+++ b/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
@@ -3,7 +3,12 @@
     <h2 class="text-2xl font-bold text-center text-blue-900">EXPLORA NUESTROS LIBROS</h2>
 
     <!-- Botón para ir al anterior -->
-    <button class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-blue-900 text-white p-2 rounded shadow-md z-10 hover:bg-blue-700 transition-colors duration-200" (click)="scrollLeft()">
+    <button
+      class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-blue-900 text-white p-2 rounded shadow-md z-10 hover:bg-blue-700 transition-colors duration-200"
+      (mousedown)="onMouseDown($event)"
+      (mouseup)="onMouseUp()"
+      (mouseleave)="onMouseUp()"
+    >
       ‹
     </button>
 
@@ -16,17 +21,24 @@
         <div class="absolute inset-0 bg-black bg-opacity-75 flex flex-col items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 rounded-lg">
           <h3 class="text-white text-xl font-bold text-center">{{ libro.titulo }}</h3>
           <p class="text-white text-sm">{{ libro.autor }}</p>
-          <p class="text-white text-lg font-semibold">{{ libro.precio }} € </p>
-          <button (click)="verDetallesLibro(libro.id)" class="mt-4 px-4 py-2 bg-blue-900 text-white rounded hover:bg-blue-700">
+          <p class="text-white text-lg font-semibold">{{ libro.precio }} €</p>
+          <button
+            (click)="verDetallesLibro(libro.id)"
+            class="mt-4 px-4 py-2 bg-blue-900 text-white rounded hover:bg-blue-700"
+          >
             Ver detalles
           </button>
-
         </div>
       </div>
     </div>
 
     <!-- Botón para ir al siguiente -->
-    <button class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-blue-900 text-white p-2 rounded shadow-md z-10 hover:bg-blue-700 transition-colors duration-200" (click)="scrollRight()">
+    <button
+      class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-blue-900 text-white p-2 rounded shadow-md z-10 hover:bg-blue-700 transition-colors duration-200"
+      (mousedown)="onMouseDown($event)"
+      (mouseup)="onMouseUp()"
+      (mouseleave)="onMouseUp()"
+    >
       ›
     </button>
   </div>
