--- a/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
+++ b/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
@@ -8,6 +8,8 @@
       (mousedown)="onMouseDown($event)"
       (mouseup)="onMouseUp()"
       (mouseleave)="onMouseUp()"
+      (click)="scrollLeft()"
+
     >
       ‹
     </button>
@@ -38,6 +40,7 @@
       (mousedown)="onMouseDown($event)"
       (mouseup)="onMouseUp()"
       (mouseleave)="onMouseUp()"
+      (click)="scrollRight()"
     >
       ›
     </button>
