--- a/src/app/component/Inicio_componentes_propios/recomendacion-libro/recomendacion-libro.component.html
+++ b/src/app/component/Inicio_componentes_propios/recomendacion-libro/recomendacion-libro.component.html
@@ -2,7 +2,10 @@
   <h2 class="text-3xl font-bold">Los mejores calificados:</h2>
   <div class="container mx-auto my-20 flex justify-center">
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-1 gap-4">
-      <div *ngFor="let libro of libros" class="bg-white rounded-lg shadow-md flex flex-col md:flex-row max-w-lg mx-auto">
+
+      <div *ngFor="let libro of libros"
+           class="bg-white rounded-lg shadow-md flex flex-col md:flex-row max-w-lg mx-auto group transition-all duration-300 hover:shadow-xl">
+
         <!-- Contenedor de la imagen con overlay -->
         <div class="md:w-1/2 relative h-64 md:h-auto overflow-hidden group">
           <img [src]="libro.imagen" alt="{{ libro.titulo }}" class="object-cover w-full h-full md:rounded-l-lg md:rounded-t-none">
@@ -16,17 +19,22 @@
         </div>
 
         <!-- Contenido del libro -->
-        <div class="md:w-1/2 p-6 flex flex-col justify-between">
+        <div class="md:w-1/2 p-6 flex flex-col justify-between relative">
           <div>
             <div class="font-bold text-xl mb-2 text-gray-900">{{ libro.titulo }}</div>
             <p class="text-gray-700 text-base mb-4 line-clamp-3">{{ libro.resumen }}</p>
           </div>
           <div class="flex items-center">
             <div class="text-sm">
-              <p class="text-gray-900 leading-none">
-                {{ libro!.autorNombre }} {{ libro!.autorApellidos }}
+              <p class="text-gray-900 leading-none">{{ libro!.autorNombre }} {{ libro!.autorApellidos }}</p>
             </div>
           </div>
+
+          <!-- Calificación (inicialmente oculta, aparece con hover) -->
+          <div class="absolute top-2 right-2 bg-yellow-500 text-white text-sm font-semibold px-3 py-1 rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+            ⭐ {{ libro.mediaCalificacion }}
+          </div>
+
         </div>
       </div>
     </div>
